workloads/chess/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chess
  namespace: chess
  labels:
    app: chess
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chess
  template:
    metadata:
      labels:
        app: chess
    spec:
      containers:
        - name: chess
          image: ghcr.io/dannylongeuay/cyberdan-chess-ui
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              memory: 128Mi
