workloads/chess/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chess
  namespace: chess
  labels:
    app: chess
spec:
  selector:
    app: chess
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
