workloads/chess/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: chess
  namespace: chess
spec:
  parentRefs:
    - name: main
      namespace: gateway
  hostnames:
    - chess.cyberdan.dev
  rules:
    - backendRefs:
        - name: chess
          port: 80
